# pwatch

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.ja.md  README.md  dist-workspace.toml  release.toml
.github/workflows/: publish-crate.yml  release.yml
src/: config.rs  display.rs  i18n.rs  main.rs
src/platform/: macos.rs
src/tui/: app.rs  handler.rs  ui.rs
