[package]
name = "pwatch"
version = "0.1.0"
edition = "2024"
authors = ["iorinu"]
description = "A fast, friendly CLI/TUI tool for viewing port usage and killing processes."
license = "MIT"
readme = "README.md"
repository = "https://github.com/iorinu/pwatch"
homepage = "https://github.com/iorinu/pwatch"
documentation = "https://github.com/iorinu/pwatch"
keywords = ["cli", "tui", "port", "process", "lsof"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
comfy-table = { version = "7.2.2", features = ["custom_styling"] }
crossterm = "0.29.0"
figlet-rs = "0.1.5"
nix = { version = "0.31.2", features = ["signal", "process"] }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
dirs = "6"
clap_complete = "4.6.5"
